--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 /*Neon*/
-a {
+span {
   text-align: center;
   font-size: 5rem;
   margin-bottom: 0;
@@ -48,32 +48,32 @@ label {
   margin-top: 1rem;
 }
 
-a:nth-child(1) {
+span:nth-child(1) {
   font-family: Monoton;
   animation: neon1 1.5s ease-in-out infinite alternate;
 }
 
-a:nth-child(2) {
+span:nth-child(2) {
   font-family: Iceland;
   animation: neon2 1.5s ease-in-out infinite alternate;
 }
 
-a:nth-child(3) {
+span:nth-child(3) {
   font-family: Pacifico;
   animation: neon3 1.5s ease-in-out infinite alternate;
 }
 
-a:nth-child(4) {
+span:nth-child(4) {
   font-family: "Press Start 2P";
   animation: neon4 1.5s ease-in-out infinite alternate;
 }
 
-a:nth-child(5) {
+span:nth-child(5) {
   font-family: Audiowide;
   animation: neon5 1.5s ease-in-out infinite alternate;
 }
 
-a:nth-child(6) {
+span:nth-child(6) {
   font-family: Vampiro One;
   animation: neon6 1.5s ease-in-out infinite alternate;
 }
